Jan 06, 2008 - chris
o bugfix: when uncoupling a cursor, sometimes the connection between page
    and cursor was broken

Jan 02, 2008 - chris
o API change for ham_env_close: if you call ham_env_close and there are still
    open Databases, the function will no longer fail with HAM_ENV_NOT_EMPTY; 
    instead, the Databases are closed with ham_close; you still have to
    close the Cursors of each Database, though.
o API change for ham_close: if you call ham_close and there are still
    open Cursors, the function will no longer fail with HAM_DB_NOT_EMPTY; 
    instead, the Cursors are invalidated, but you still have to call 
    ham_cursor_close to prevent memory leaks. Alternatively, the flag
    HAM_AUTO_CLEANUP implicitely calls ham_cursor_close on each function.

Jan 01, 2008 - chris
o calling ham_set_prefix_compare_func with NULL as a function pointer
    does no longer set the default prefix compare function, but completely
    disables prefix comparison

Dec 31, 2007 - chris
o Most errors now emit a ham_trace debug messages, esp. HAM_INV_PARAMETER;
    also, in release mode all messages now show the hamsterdb function name,
    and in debug mode they show the hamsterdb source filename/line number

Dec 30, 2007 - chris
o The debug- and error-messages are now always compiled; the message handler
    of the debug build prints all messages, the handler of the release build
    ignores debug messages

Dec 29, 2007 - chris
o Removed the function ham_dump; it was replaced by the command line tool
    and is no longer necessary

Dec 20, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.9

Dec 19, 2007 - chris
o Fixes in the MSVC Solution for Win64; the types (include/ham/types.h)
    were not set correctly to 64bit values

Dec 17, 2007 - chris
o SPARC fixes: several minor changes to avoid unaligned memory access,
    especially with duplicate keys and extended keys; hamsterdb 