@@ -1,3 +1,8 @@
+Jan 08, 2008 - chris
+o bugfix: when inserting with ham_cursor_insert, but the insert fails (i.e.
+    because the key already exists), the cursor is modified and uninitialized,
+    but it should still point to the same element as before the operation
+
 Jan 06, 2008 - chris
 o bugfix: when uncoupling a cursor, sometimes the connection between page
     and cursor was broken
